--- a/.github/workflows/terraform-cd.yml
+++ b/.github/workflows/terraform-cd.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam:032811251961:role/github-terraform-role
+          role-to-assume: arn:aws:iam:032811251961:role/git-terraform-role
           aws-region: us-east-1
   
       - name: Set up Terraform
