--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -18,9 +18,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam:032811251961:role/github-terraform-role
+          role-to-assume: arn:aws:iam:032811251961:role/git-terraform-role
           aws-region: us-east-1
-  
+
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
 
