--- a/.github/workflows/terraform-cd.yml
+++ b/.github/workflows/terraform-cd.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+# 🔴 ESSENCIAL PARA OIDC
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   terraform-apply:
     name: Terraform Apply
@@ -14,12 +19,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
+      - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam:032811251961:role/git-terraform-role
+          # ⚠️ ARN corrigido (faltavam os ::)
+          role-to-assume: arn:aws:iam::032811251961:role/git-terraform-role
           aws-region: us-east-1
-  
+
+      - name: Verify AWS identity
+        run: aws sts get-caller-identity
+
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
@@ -47,4 +56,4 @@ jobs:
         run: terraform validate
 
       - name: Terraform Apply
-        run: terraform apply -var="account=${{ env.account_id }}" -auto-approve
+        run: terraform apply -auto-approve -var="account=${{ env.account_id }}"
